# django-cowsay

./: pyproject.toml
cowsay/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
cowsay/migrations/: 0001_initial.py  0002_cowsay_change_cow.py
cowsay/templates/: history.html  index.html
